fixed whitespace in header/footer

--- a/live/portfolio/bartlet-for-america/css/style.css
+++ b/live/portfolio/bartlet-for-america/css/style.css
@@ -306,7 +306,7 @@ input[type="checkbox"][readonly] {
 
 #header {
     height: 40px;
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 #header h1 {
@@ -488,7 +488,8 @@ input[type="checkbox"][readonly] {
 }
 
 #footer .nav-list {
-    margin: 0 auto 40px;
+    margin: 0 auto;    
+    padding-bottom: 40px;
     text-align: center;
 }
 
